--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Pertemuan10"
+        android:theme="@style/Theme.Pertemuan10.WithActionBar"
         tools:targetApi="31">
+        <activity
+            android:name=".Profile"
+            android:exported="false"
+            android:theme="@style/Theme.Pertemuan10"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
